ST: Apply Roles when CO use namespace-rbac and cluster wide options properly (#5266)
* Replace existing resources when CO is installed by helm

Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

* Fix?

Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

* Apply roles properly for rbac

Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

* Add new class with RoleResource

Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

* Comment from Maros

Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

* comments

Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>